# WVSU-Interferometer

./: .gitignore  README.md
interferometer/: CMakeLists.txt  README.md  interferometer.cpp  main.cpp
interferometer/env/boot/: cmdline.txt  config.txt
interferometer/env/etc/: hostname  hosts
interferometer/env/etc/modules-load.d/: raspicam.conf
interferometer/env/lib/systemd/system/: interferometer.service
microcontroller/: .travis.yml  platformio.ini  teensy.ino
microcontroller/src/: teensy.cpp
