cmake_minimum_required( VERSION 2.8 )
project( interferometer )
set( OpenCV_STATIC ON )
set( CMAKE_EXE_LINKER_FLAGS -static )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( interferometer main.cpp )
target_link_libraries( interferometer ${OpenCV_LIBS} )
